# barcode_reader

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: barcode_scanner.cpp
test/: barcode_scanner_test.cpp
